# anime-gen-ai

./: .env.example  .gitignore  README.md  comfyui_client.py  config.json  config.py  gemini_client.py  genetic_algorithm.py  main.py  prompt_tag_pool.csv  pyproject.toml  requirements.txt  spec_pack.py  workflow.json  workflow_manager.py
configs/: default.toml
prompt_auto_improvement/: __init__.py  __main__.py  cli.py  config.py  io_manager.py  prompts.py  runner.py  utils.py
prompt_auto_improvement/imggen/: __init__.py  base.py  comfyui.py
prompt_auto_improvement/vlm/: __init__.py  base.py  gemini_api.py
